# biomae-gammarus

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
checkpoints/: README.md  model_meta.json
configs/: classification.yaml  detection.yaml
data/: README.md
notebooks/: 01_train_yolo.ipynb  02_train_mobilenet.ipynb  03_train_mlp_fusion.ipynb  04_inference_pipeline.ipynb  README.md
notebooks/experiments/: Untitled.ipynb  Untitled1.ipynb  detect&cropBDD.ipynb  merge_classes.ipynb  raw2mobilenet.ipynb  testClassifNewData.ipynb  train_Clip.ipynb  train_ConvNextV2.ipynb  train_mobilenetv3.ipynb  train_mobilenetv3_4classes.ipynb  train_mobilenetv3_MFC_3classes.ipynb
scripts/: organize_dataset.py
src/biomae/: __init__.py  classification.py  cropping.py  detection.py  fusion.py  paths.py  pipeline.py
