[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "biomae"
version = "0.1.0"
description = "Gammarus detection and classification pipeline for Biomae biosurveillance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["jupyter", "ipywidgets"]

[tool.setuptools.packages.find]
where = ["src"]
